--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -659,4 +659,4 @@
         <p>Anant Bansode (123B1B089)</p>
     </div>
 </body>
-</html>
+</html> -->
