--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         /* Color Palette */
         :root {
-            --primary: #2A5C82;    /* Deep Blue */
+            --primary: #3d9ae1;    /* Deep Blue */
             --secondary: #4CAF50;  /* Fresh Green */
             --accent: #FF6B6B;     /* Coral Red */
             --text: #2D3436;       /* Dark Gray */
