--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
 <div class="footer" style="font-size: x-large;font-weight: 400;color: darkorange; background-color: rgb(23, 23, 23);border-radius:12px ;justify-content: center;">
     <p>Creators: Atharva Naik (124B2B011) </p>
-    <p> Anant Bansode (123B1B089)</p>
+<!--     <p> Anant Bansode (123B1B089)</p> -->
 </div>
 
 </body>
